todoロジック追加
