# api/swagger/swagger.yaml
@@ -3,7 +3,7 @@ info:
   version: "0.0.1"
   title: Hello World App
 # during dev, should point to your local machine
-host: localhost:10010
+host: localhost:8080
 # basePath prefixes all resource paths 
 basePath: /
 # 
@@ -18,6 +18,82 @@ consumes:
 produces:
   - application/json
 paths:
+  /todos:
+    x-swagger-router-controller: todo
+    get:
+      tags: [Todos]
+      summary: TODOの一覧取得
+      description: これまでに登録されているTODOの一覧を取得します
+      operationId: getTodoList
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            title: todos
+            type: array
+            items:
+              $ref: '#/definitions/Todo'
+    post:
+      tags: [Todos]
+      summary: TODO情報登録
+      description: 新しいTODO情報を登録します。
+      operationId: createTodo
+      parameters:
+        - name: todo
+          in: body
+          description: todo parameter
+          required: true
+          schema:
+            $ref: '#/definitions/Todo'
+      responses:
+        '201':
+          description: successful operation
+          schema:
+            $ref: '#/definitions/Todo'
+  /todos/{id}:
+    x-swagger-router-controller: todo
+    parameters:
+      - name: id
+        in: path
+        description: todo id
+        required: true
+        type: integer
+        format: int64
+    get:
+      tags: [Todos]
+      summary: TODO情報取得
+      description: 指定したidに一致するTODO情報を取得します。
+      operationId: getTodoById
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            $ref: '#/definitions/Todo'
+    put:
+      tags: [Todos]
+      summary: TODO情報更新
+      description: 指定したidに一致するTODO情報を更新します。
+      operationId: updateTodo
+      parameters:
+        - name: todo
+          in: body
+          description: todo parameter
+          required: true
+          schema:
+            $ref: '#/definitions/Todo'
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            $ref: '#/definitions/Todo'
+    delete:
+      tags: [Todos]
+      summary: TODO情報削除
+      description: 指定したidに一致するTODO情報を削除します。
+      operationId: deleteTodo
+      responses:
+        '204':
+          description: successful operation
   /hello:
     # binds a127 app logic to a route
     x-swagger-router-controller: hello_world
@@ -46,6 +122,37 @@ paths:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
 definitions:
+  Todo:
+    type: object
+    required: [id, title]
+    properties:
+      id:
+        type: integer
+        description: TODOを識別する一意のID
+        readOnly: true
+        example: 1
+      title:
+        type: string
+        description: タイトル
+        example: 買い物
+      content:
+        type: string
+        description: 内容
+        example: お茶、豆腐、豚肉300g、うどん
+      done:
+        type: boolean
+        description: 完了フラグ
+        example: false
+      created_at:
+        type: string
+        format: date-time
+        description: 作成日時
+        example: 2018-09-20T10:00:00Z
+      updated_at:
+        type: string
+        format: date-time
+        description: 更新日時
+        example: 2018-09-20T10:00:00Z
   HelloWorldResponse:
     required:
       - message
